crates/alder-parse/src/snapshots/alder_parse__module__tests__docs_web_styles.snap
---
source: crates/alder-parse/src/module.rs
description: "let card = style {\n    padding: 16px,\n    color: theme.text,\n    \":hover\": { color: theme.accent },\n    \"@media (max-width: 600px)\": { padding: 8px },\n}\n"
---
Module {
    items: [
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 6,
                    column: 2,
                },
            },
            value: Item {
                attributes: [],
                visibility: Private,
                kind: Let(
                    LetDecl {
                        pattern: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 5,
                                },
                                end: Position {
                                    line: 1,
                                    column: 9,
                                },
                            },
                            value: Var(
                                "card",
                            ),
                        },
                        annotation: None,
                        value: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 12,
                                },
                                end: Position {
                                    line: 6,
                                    column: 2,
                                },
                            },
                            value: Style(
                                Style {
                                    entries: [
                                        StyleEntry {
                                            key: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 2,
                                                        column: 5,
                                                    },
                                                    end: Position {
                                                        line: 2,
                                                        column: 12,
                                                    },
                                                },
                                                value: Ident(
                                                    "padding",
                                                ),
                                            },
                                            value: Dimension {
                                                number: NumberLit {
                                                    value: 16.0,
                                                    text: "16",
                                                },
                                                unit: "px",
                                            },
                                        },
                                        StyleEntry {
                                            key: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 3,
                                                        column: 5,
                                                    },
                                                    end: Position {
                                                        line: 3,
                                                        column: 10,
                                                    },
                                                },
                                                value: Ident(
                                                    "color",
                                                ),
                                            },
                                            value: Expr(
                                                Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 3,
                                                            column: 12,
                                                        },
                                                        end: Position {
                                                            line: 3,
                                                            column: 22,
                                                        },
                                                    },
                                                    value: Access {
                                                        record: Located {
                                                            region: Region {
                                                                start: Position {
                                                                    line: 3,
                                                                    column: 12,
                                                                },
                                                                end: Position {
                                                                    line: 3,
                                                                    column: 17,
                                                                },
                                                            },
                                                            value: Var(
                                                                "theme",
                                                            ),
                                                        },
                                                        field: Located {
                                                            region: Region {
                                                                start: Position {
                                                                    line: 3,
                                                                    column: 18,
                                                                },
                                                                end: Position {
                                                                    line: 3,
                                                                    column: 22,
                                                                },
                                                            },
                                                            value: "text",
                                                        },
                                                    },
                                                },
                                            ),
                                        },
                                        StyleEntry {
                                            key: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 4,
                                                        column: 5,
                                                    },
                                                    end: Position {
                                                        line: 4,
                                                        column: 13,
                                                    },
                                                },
                                                value: Str(
                                                    ":hover",
                                                ),
                                            },
                                            value: Nested(
                                                Style {
                                                    entries: [
                                                        StyleEntry {
                                                            key: Located {
                                                                region: Region {
                                                                    start: Position {
                                                                        line: 4,
                                                                        column: 17,
                                                                    },
                                                                    end: Position {
                                                                        line: 4,
                                                                        column: 22,
                                                                    },
                                                                },
                                                                value: Ident(
                                                                    "color",
                                                                ),
                                                            },
                                                            value: Expr(
                                                                Located {
                                                                    region: Region {
                                                                        start: Position {
                                                                            line: 4,
                                                                            column: 24,
                                                                        },
                                                                        end: Position {
                                                                            line: 4,
                                                                            column: 36,
                                                                        },
                                                                    },
                                                                    value: Access {
                                                                        record: Located {
                                                                            region: Region {
                                                                                start: Position {
                                                                                    line: 4,
                                                                                    column: 24,
                                                                                },
                                                                                end: Position {
                                                                                    line: 4,
                                                                                    column: 29,
                                                                                },
                                                                            },
                                                                            value: Var(
                                                                                "theme",
                                                                            ),
                                                                        },
                                                                        field: Located {
                                                                            region: Region {
                                                                                start: Position {
                                                                                    line: 4,
                                                                                    column: 30,
                                                                                },
                                                                                end: Position {
                                                                                    line: 4,
                                                                                    column: 36,
                                                                                },
                                                                            },
                                                                            value: "accent",
                                                                        },
                                                                    },
                                                                },
                                                            ),
                                                        },
                                                    ],
                                                },
                                            ),
                                        },
                                        StyleEntry {
                                            key: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 5,
                                                        column: 5,
                                                    },
                                                    end: Position {
                                                        line: 5,
                                                        column: 32,
                                                    },
                                                },
                                                value: Str(
                                                    "@media (max-width: 600px)",
                                                ),
                                            },
                                            value: Nested(
                                                Style {
                                                    entries: [
                                                        StyleEntry {
                                                            key: Located {
                                                                region: Region {
                                                                    start: Position {
                                                                        line: 5,
                                                                        column: 36,
                                                                    },
                                                                    end: Position {
                                                                        line: 5,
                                                                        column: 43,
                                                                    },
                                                                },
                                                                value: Ident(
                                                                    "padding",
                                                                ),
                                                            },
                                                            value: Dimension {
                                                                number: NumberLit {
                                                                    value: 8.0,
                                                                    text: "8",
                                                                },
                                                                unit: "px",
                                                            },
                                                        },
                                                    ],
                                                },
                                            ),
                                        },
                                    ],
                                },
                            ),
                        },
                    },
                ),
            },
        },
    ],
    comments: [],
}
