crates/alder-parse/src/snapshots/alder_parse__module__tests__empty_module.snap
---
source: crates/alder-parse/src/module.rs
description: ""
---
Module {
    items: [],
    comments: [],
}
