crates/alder-parse/src/snapshots/alder_parse__module__tests__error_bad_end.snap
---
source: crates/alder-parse/src/module.rs
description: "type Id = Number\n}\n"
---
BadEnd(
    2,
    1,
)
