crates/alder-parse/src/snapshots/alder_parse__module__tests__error_item.snap
---
source: crates/alder-parse/src/module.rs
description: import http
---
Item(
    Import(
        Path(
            Start(
                1,
                8,
            ),
            1,
            8,
        ),
        1,
        1,
    ),
    1,
    1,
)
