crates/alder-parse/src/snapshots/alder_parse__module__tests__error_pub_alone.snap
---
source: crates/alder-parse/src/module.rs
description: "type Id = Number\npub\n"
---
Item(
    AfterPub(
        3,
        1,
    ),
    2,
    1,
)
