crates/alder-parse/src/snapshots/alder_parse__module__tests__error_same_line_import_then_type.snap
---
source: crates/alder-parse/src/module.rs
description: import ~/db type Id = Number
---
SameLine(
    1,
    13,
)
