crates/alder-parse/src/snapshots/alder_parse__module__tests__error_same_line_items.snap
---
source: crates/alder-parse/src/module.rs
description: "fn a() {} fn b() {}"
---
SameLine(
    1,
    11,
)
