crates/alder-parse/src/snapshots/alder_parse__module__tests__error_same_line_let_items.snap
---
source: crates/alder-parse/src/module.rs
description: let a = 1 let b = 2
---
SameLine(
    1,
    11,
)
