crates/alder-parse/src/snapshots/alder_parse__module__tests__error_semicolon_after_item.snap
---
source: crates/alder-parse/src/module.rs
description: let a = 1;
---
Item(
    Semicolon(
        1,
        10,
    ),
    1,
    10,
)
