crates/alder-parse/src/snapshots/alder_parse__module__tests__leading_comments.snap
---
source: crates/alder-parse/src/module.rs
description: "//! Module docs are skipped in M1.\n// A plain comment.\n\n/// Item docs too.\ntype Id = Number\n"
---
Module {
    items: [
        Located {
            region: Region {
                start: Position {
                    line: 5,
                    column: 1,
                },
                end: Position {
                    line: 5,
                    column: 17,
                },
            },
            value: Item {
                attributes: [],
                visibility: Private,
                kind: TypeAlias(
                    TypeAlias {
                        name: Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 6,
                                },
                                end: Position {
                                    line: 5,
                                    column: 8,
                                },
                            },
                            value: "Id",
                        },
                        params: [],
                        typ: Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 11,
                                },
                                end: Position {
                                    line: 5,
                                    column: 17,
                                },
                            },
                            value: Named {
                                path: Path {
                                    segments: [
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 5,
                                                    column: 11,
                                                },
                                                end: Position {
                                                    line: 5,
                                                    column: 17,
                                                },
                                            },
                                            value: "Number",
                                        },
                                    ],
                                },
                                args: [],
                            },
                        },
                    },
                ),
            },
        },
    ],
    comments: [
        Comment {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 35,
                },
            },
            text: "//! Module docs are skipped in M1.",
            kind: InnerDoc,
        },
        Comment {
            region: Region {
                start: Position {
                    line: 2,
                    column: 1,
                },
                end: Position {
                    line: 2,
                    column: 20,
                },
            },
            text: "// A plain comment.",
            kind: Line,
        },
        Comment {
            region: Region {
                start: Position {
                    line: 4,
                    column: 1,
                },
                end: Position {
                    line: 4,
                    column: 19,
                },
            },
            text: "/// Item docs too.",
            kind: OuterDoc,
        },
    ],
}
